--- a/day5.html
+++ b/day5.html
@@ -50,6 +50,12 @@
         a bottom margin of 100px,
         and a left margin of 80px.
     </div>
+    	
+<div class="div1">This div element has a top margin of 100px, 
+    a right margin of 150px, 
+    a bottom margin of 100px, 
+    and a left margin of 80px.</div>
+    <!--boarder radius-->
     <div class="rcorners1">This is the first rounded square!</div>
     <div class="rcorners2">This is the second rounded square!</div>
     <div class="rcorners3">This is the third rounded square!</div>
@@ -63,6 +69,7 @@
         <div class="absolute">This div has absolute positioning.</div>
     </div>
     <div class="sticky">This div has sticky positioning.</div>
+
 
     <p>Some text to enable scrolling.
         Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo.
@@ -148,6 +155,22 @@
         <img class="invisible-image" src="https://picsum.photos/200/300">
         with it's visibility set to "hidden."
     </p>
+
+<span>oh my, we spanning?!</span>
+
+<div class="simple">
+    creating simple div class
+</div>
+
+<div class="fancy">
+    manipulating to make fancy
+</div>
+
+<div class="box">
+    floating
+</div>
+<div class="after-box">with clear: you move the section down</div>
+
 </body>
 
 </html>
